tilføjet board
mongoose model
routes
swagger
